--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -11,6 +11,9 @@
 
   <div class="status-list">
     <%= render partial: "statuses/form", locals: { status: @status }%>
+    <% current_user.newsfeed_statuses.each do |status| %>
+      <%= render partial: "statuses/show", locals: { status: status }%>
+    <% end %>
   </div>
 
   <div class="right-sidebar">
