--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -5,15 +5,17 @@
   </div>
 </header>
 
-<div class="middle-content">
+<div class="content">
   <div class="left-sidebar">
   </div>
 
-  <div class="status-list">
-    <%= render partial: "statuses/form", locals: { status: @status }%>
-    <% current_user.newsfeed_statuses.each do |status| %>
-      <%= render partial: "statuses/show", locals: { status: status }%>
-    <% end %>
+  <div class="middle-content">
+    <div class="status-list">
+      <%= render partial: "statuses/form", locals: { status: @status } %>
+      <% current_user.newsfeed_statuses.each do |status| %>
+        <%= render partial: "statuses/show", locals: { status: status } %>
+      <% end %>
+    </div>
   </div>
 
   <div class="right-sidebar">
