--- a/app/views/root/_header.html.erb
+++ b/app/views/root/_header.html.erb
@@ -1,3 +1,5 @@
+<% user = current_user %>
+
 <div class="search-bar">
   <input type="text" value="Search for...">
 </div>
@@ -6,8 +8,8 @@
   <ul>
     <li><a href="<% user_profile_url(user) %>"><img><%= user.fname %></a></li>
     <li><a href="<%= root_url %>">Home</a></li>
-    <li><a href="#">Find Friends</a></li>
-    <li><a href="#"><img>Friend Requests</a></li>
+    <li><a href="<%= users_url %>">Find Friends</a></li>
+    <li><a href="<%= requests_users_url %>"><img>Friend Requests</a></li>
     <li><a href="#"><img>Inbox</a></li>
     <li><a href="#"><img>Account Settings</a></li>
     <li><%= button_to "Log Out", session_url, method: "delete", class: "logout-button" %></li>
