--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,6 +10,28 @@
   </div>
 
   <div class="middle-content">
+    <div class="about-content group">
+      <% profile = @user.profile %>
+      <div class="about-img">
+        <%= image_tag profile.profile_img.url(:big) %>
+      </div>
+      <div class="about-list">
+        <ul>
+          <li><h3><%= @user.name %></h3></li>
+          <li>Birthday: &nbsp;<%= @user.bday %></li>
+          <li>Location: &nbsp;<%= profile.location %></li>
+          <li>Employer: &nbsp;<%= profile.employer %></li>
+          <li>School: &nbsp;<%= profile.school %></li>
+        </ul>
+      </div>
+      <div class="about-links">
+        <a href="<%= user_albums_url(@user) %>">Photos</a>
+        <% num_friends = @user.friends.count %>
+        <% unless num_friends == 0 %>
+          <a href="<%= friends_user_url(@user) %>"><%= pluralize(num_friends, "Friend") %></a>
+        <% end %>
+      </div>
+    </div>
     <div class="status-list">
       <%= render partial: "statuses/form", locals: { status: @status } %>
     </div>
