--- a/app/views/statuses/_show.html.erb
+++ b/app/views/statuses/_show.html.erb
@@ -1,29 +1,52 @@
 <% owner = User.find(status.owner_id) %>
 <% like = Like.find_by_data(current_user.id, "Status", status.id) %>
+<% profile = owner.profile %>
 <div class="status">
-  <img class="status-user-img">
-  <a href="<%= user_profile_url(owner.id) %>">
-    <%= owner.name %>
-  </a>
-  <div class="status-content">
-    <div class="status-body">
-      <%= status.body.html_safe %>
+  <div class="status-data group">
+    <div class="status-user-img">
+      <%= image_tag profile.profile_img.url(:small) %>
     </div>
-    <div class="status-links">
-      <% if like %>
-        <%= link_to "Unlike", likes_url(like_id: like.id), method: :delete %>
-      <% else %>
-        <%= link_to "Like", likes_url( object_type: "Status", object_id: status.id), method: :post %>
+    <div class="status-content">
+      <a href="<%= user_profile_url(owner) %>">
+        <%= owner.name %>
+      </a>
+      <% unless status.owner_id == status.wall_user_id %>
+        <% about_user = User.find(status.wall_user_id) %>
+        &nbsp;>>&nbsp;
+        <a href="<%= user_profile_url(about_user) %>">
+          <%= about_user.name %>
+        </a>
       <% end %>
+
+      <div class="status-body">
+        <%= status.body.html_safe %>
+      </div>
+      <div class="status-links group">
+        <ul>
+          <li>
+            <% if like %>
+              <%= link_to "Unlike", likes_url(like_id: like.id, user_id: params[:user_id]), method: :delete %>
+            <% else %>
+              <%= link_to "Like", likes_url( object_type: "Status", object_id: status.id, user_id: params[:user_id]), method: :post %>
+            <% end %>
+          </li>
+          <li>
+            <% like_count = Like.like_count_by_object(status) %>
+            <% if like_count != 0%>
+              <%= pluralize(like_count, "Like") %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
     </div>
     <br>
-    <div class="comment-list">
-      <h3>Comments</h3>
-      <% status.comments.each do |comment| %>
-        <%= render partial: "comments/show", locals: { comment: comment } %>
-        <br>
-      <% end %>
-      <%= render partial: "comments/form", locals: { object: status } %>
-    </div>
+  </div>
+  <div class="comment-list">
+    <h3>Comments</h3>
+    <% status.comments.each do |comment| %>
+      <%= render partial: "comments/show", locals: { comment: comment } %>
+      <br>
+    <% end %>
+    <%= render partial: "comments/form", locals: { object: status } %>
   </div>
 </div>
