--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 <header>
   <div class="header-wrapper">
     <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: @user } %>
+    <%= render partial: "root/header", locals: { user: current_user } %>
   </div>
 </header>
 
