--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -18,7 +18,7 @@
           <li>
             <figure>
               <figcaption><%= photo.caption %></figcaption>
-              <%= image_tag photo.img.url(:big) %>
+              <%= image_tag photo.img.url %>
             </figure>
           </li>
       </ul>
