--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="header-wrapper">
     <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: @user } %>
+    <%= render partial: "root/header", locals: { user: current_user } %>
   </div>
 </header>
 
