--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -23,6 +23,7 @@
               <%= image_tag photo.img.url(:big) %>
             </figure>
           </li>
+        <% end %>
       </ul>
     </div>
   </div>
