--- a/app/views/message_threads/index.html.erb
+++ b/app/views/message_threads/index.html.erb
@@ -8,16 +8,18 @@
 <div class="content">
   <div class="left-sidebar">
     <ul class="messaged-friends-list">
-      <% @messaged_friends.each do |friend| %>
+      <% @messaged_friends_with_thread.each do |pair| %>
+        <% friend = pair[0] %>
+        <% thread = pair[1] %>
         <li>
-          <div class="user-img">
-            <%= image_tag friend.profile_img.url(:small) %>
-          </div>
-          <div class="user-name">
-            <a href="<%= user_profile_url(friend) %>">
+          <a href="<%= user_message_thread_url(current_user, thread) %>">
+            <div class="user-img">
+              <%= image_tag friend.profile.profile_img.url(:small) %>
+            </div>
+            <div class="user-name">
               <%= friend.name %>
-            </a>
-          </div>
+            </div>
+          </a>
         </li>
       <% end %>
     </ul>
