--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<form class="photo-form" action="<%= photos_url %>" nctype="multipart/form-data" method="post">
+<form class="photo-form" action="<%= photos_url %>" enctype="multipart/form-data" method="post">
   <input
     name="authenticity_token"
     type="hidden"
