--- a/app/views/root/_header.html.erb
+++ b/app/views/root/_header.html.erb
@@ -10,7 +10,7 @@
     <li><a href="<%= root_url %>">Home</a></li>
     <li><a href="<%= users_url %>">Find Friends</a></li>
     <li><a href="<%= requests_users_url %>"><img>Friend Requests</a></li>
-    <li><a href="#"><img>Inbox</a></li>
+    <li><a href="<%= user_message_threads_url(user) %>"><img>Inbox</a></li>
     <li><a href="#"><img>Account Settings</a></li>
     <li><%= button_to "Log Out", session_url, method: "delete", class: "logout-button" %></li>
   </ul>
