--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,10 @@
           <br>
           <%= button_to "Unfriend", friendship_url(friendship), method: "delete" %>
           <br>
-          <%= button_to "Send Message", new_message_url, method: :get, recipient_id: friend.id %>
+          <form action="<%= new_message_url %>" method="get">
+            <input type="hidden" name="recipient_id" value="<%= friend.id %>">
+            <input type="submit" value="Send Message">
+          </form>
         <% end %>
         <br>
       <% end %>
@@ -43,7 +46,10 @@
           <% else %>
             <%= button_to "Friend Request", user_friendship_url(user), method: "post" %>
           <% end %>
-          <%= button_to "Send Message", new_message_url, method: :get, recipient_id: user.id %>
+          <form action="<%= new_message_url %>" method="get">
+            <input type="hidden" name="recipient_id" value="<%= user.id %>">
+            <input type="submit" value="Send Message">
+          </form>
         <% end %>
       <% end %>
     </div>
