--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -15,7 +15,7 @@
       <br>
       <%= image_tag @photo.img.url %>
       <% tags = @photo.tags %>
-      <% if tags %>
+      <% unless tags.empty? %>
         <br>
         <h4>Tagged in this photo:</h4>
         <br>
