--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -15,11 +15,16 @@
       <br>
       <%= image_tag @photo.img.url %>
       <% tags = @photo.tags %>
+      <% self_tag = tags.where("user_id = ?", current_user.id) %>
+      <% tagged_users = tags.map { |tag| User.find(tag.user_id) } %>
       <% unless tags.empty? %>
+        <% unless self_tag.empty? %>
+          <br>
+          <%= button_to "Remove your tag", tag_url(self_tag), method: :delete %>
+        <% end %>
         <br>
         <h4>Tagged in this photo:</h4>
         <br>
-        <% tagged_users = tags.map { |tag| User.find(tag.user_id) } %>
         <ul class="tagged-list">
           <% tagged_users.each do |user| %>
             <li class="tag-item">
@@ -31,7 +36,21 @@
         </ul>
         <br>
       <% end %>
-      <%= button_to "Tag Friends" %>
+      <% friends = current_user.friends %>
+      <% unless friends.empty? %>
+        <% friends.each do |friend| %>
+          <% unless tagged_users.include?(friend) %>
+            <form action="<%= user_photo_tags_url(@user, @photo) %>" method="post">
+              <input
+                name="authenticity_token"
+                type="hidden"
+                value="<%= form_authenticity_token %>">
+              <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
+              <input type="submit" value="<%= "Tag " + friend.name + "!" %>">
+            </form>
+          <% end %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
