--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,12 +1,25 @@
 <header>
   <div class="header-wrapper">
-    <div class="logo"></div>
+    <div class="logo">LOOKBOOK</div>
     <%= render partial: "sessions/new" %>
   </div>
 </header>
 
 <div class="main">
   <div class="about">
+    <h1>LOOKBOOK</h1>
+    <p>Is a facebook clone made by Brandon Danker for
+    the final project at App Academy. It has the following features:
+    </p>
+    <ul>
+      <li>Sign Up and Sign In</li>
+      <li>Newsfeed</li>
+      <li>Profile Page with a Wall</li>
+      <li>Albums and Photos</li>
+      <li>Tagging Friends in Photos</li>
+      <li>Notification of Taggings by Friends</li>
+      <li>Messages</li>
+    </ul.>
   </div>
   <div class="signup">
     <%= render partial: "users/new" %>
