--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,15 +12,21 @@
  *= require_tree .
  */
 
-html, body, div, input, h2, h3, h4, ul, li, a {
+html, body, div, input, h2, h1, h3, h4, ul, li, a {
   margin: 0;
   border: 0;
   padding: 0;
   font-size: 100%;
   color: black;
   font: inherit;
+  font-family: sans-serif;
   vertical-align: baseline;
   text-decoration: none;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 45px;
 }
 
 input {
