--- a/app/views/message_threads/show.html.erb
+++ b/app/views/message_threads/show.html.erb
@@ -26,6 +26,7 @@
   </div>
 
   <div class="middle-content">
+    <h1><%= "Conversation with #{@them.name}: "%></h1>
     <ul>
       <% @thread.messages.order("messages.created_at").each do |message| %>
         <% if message.owner_id == current_user.id %>
