--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -7,13 +7,24 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
     <div class="status-list">
       <%= render partial: "statuses/form", locals: { status: @status } %>
-      <% @statuses.each do |status| %>
-        <%= render partial: "statuses/show", locals: { status: status } %>
+      <% @data.each do |datum| %>
+        <% if datum.is_a?(Status) %>
+        <%= render partial: "statuses/show", locals: { status: datum } %>
+        <% elsif datum.is_a?(Notification) %>
+        <%= render partial: "notifications/show", locals: { notification: datum }%>
+        <% end %>
       <% end %>
     </div>
   </div>
