--- a/app/views/root/_header.html.erb
+++ b/app/views/root/_header.html.erb
@@ -1,8 +1,6 @@
 <% user = current_user %>
 
-<div class="search-bar">
-  <input type="text" value="Search for...">
-</div>
+<div class="logo">LOOKBOOK</div>
 
 <div class="signed-in-header-links">
   <ul>
@@ -11,7 +9,6 @@
     <li><a href="<%= users_url %>">Find Friends</a></li>
     <li><a href="<%= requests_users_url %>"><img>Friend Requests</a></li>
     <li><a href="<%= user_message_threads_url(user) %>"><img>Inbox</a></li>
-    <li><a href="#"><img>Account Settings</a></li>
     <li><%= button_to "Log Out", session_url, method: "delete", class: "logout-button" %></li>
   </ul>
 </div>
