--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -5,7 +5,7 @@
   </div>
 </header>
 
-<div class="content">
+<div class="content group">
   <div class="left-sidebar">
     <ul>
       <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
@@ -27,8 +27,5 @@
         <% end %>
       <% end %>
     </div>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
