--- a/app/views/statuses/_show.html.erb
+++ b/app/views/statuses/_show.html.erb
@@ -8,13 +8,13 @@
     </div>
     <div class="status-content">
       <a href="<%= user_profile_url(owner) %>">
-        <%= owner.name %>
+        <%= owner.name.html_safe %>
       </a>
       <% unless status.owner_id == status.wall_user_id %>
         <% about_user = User.find(status.wall_user_id) %>
         &nbsp;>>&nbsp;
         <a href="<%= user_profile_url(about_user) %>">
-          <%= about_user.name %>
+          <%= about_user.name.html_safe %>
         </a>
       <% end %>
 
