--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,6 +7,13 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
@@ -18,16 +25,13 @@
           <li>
             <a href="<%= user_photo_url(@user, photo) %>">
               <figure>
-                <figcaption><%= photo.caption %></figcaption>
-                <%= image_tag photo.img.url(:big) %>
+                <figcaption><%= photo.caption.html_safe %></figcaption>
+                <%= image_tag photo.img.url(:medium) %>
               </figure>
             </a>
           </li>
         <% end %>
       </ul>
     </div>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
