--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -7,11 +7,18 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
     <div class="photo">
-      <h3><%= @photo.caption %></h3>
+      <h3><%= @photo.caption.html_safe %></h3>
       <br>
       <%= image_tag @photo.img.url %>
       <% tags = @photo.tags %>
@@ -29,7 +36,7 @@
           <% tagged_users.each do |user| %>
             <li class="tag-item">
               <a href="<%= user_profile_url(user) %>">
-                <%= user.name %>
+                <%= user.name.html_safe %>
               </a>
             <li>
           <% end %>
@@ -46,14 +53,11 @@
                 type="hidden"
                 value="<%= form_authenticity_token %>">
               <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
-              <input type="submit" value="<%= "Tag " + friend.name + "!" %>">
+              <input type="submit" value="<%= "Tag " + friend.name.html_safe + "!" %>">
             </form>
           <% end %>
         <% end %>
       <% end %>
     </div>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
