--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -7,12 +7,16 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
     <%= render partial: "profiles/form", locals: { user: @user, profile: @profile, method: "post" } %>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
