--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -7,6 +7,13 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
@@ -17,15 +24,12 @@
         <% @friends.each do |friend| %>
           <br>
           <%= friend.profile.profile_img.url(:small) %>
-          <%= friend.name %>
+          <%= friend.name.html_safe %>
           <% if @user == current_user %>
             <% friendship = Friendship.find_pair(current_user, friend) %>
             <%= button_to "Unfriend", friendship_url(friendship), method: "delete" %>
         <% end %>
       <% end %>
     </div>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
