--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,6 +12,13 @@
 
 <div class="content">
   <div class="left-sidebar">
+    <ul>
+      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
+      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
+      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
+      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
+      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
+    </ul>
   </div>
 
   <div class="middle-content">
@@ -24,7 +31,7 @@
             <% friendship = Friendship.find_pair(current_user, friend) %>
             <br>
             <%= image_tag friend.profile.profile_img.url(:small) %>
-            <%= friend.name %>
+            <%= friend.name.html_safe %>
             <br>
             <%= button_to "Unfriend", friendship_url(friendship), method: "delete" %>
             <br>
@@ -43,7 +50,7 @@
           <div class="user group">
             <br>
             <%= image_tag user.profile.profile_img.url(:small) %>
-            <%= user.name %>
+            <%= user.name.html_safe %>
             <br>
             <% if pending_friends.include?(user) %>
               <% friendship = Friendship.find_pair(current_user, user) %>
@@ -59,8 +66,5 @@
         </div>
       <% end %>
     </div>
-  </div>
-
-  <div class="right-sidebar">
   </div>
 </div>
